--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "^1.0.53"
+clap = { version = "^3.0.14", features = ["derive"] }
+tokio = "^1.16.1"
+pulsar = "^4.1.1"
