--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+env_logger = "^0.9.0"
+log = "^0.4.14"
+
 anyhow = "^1.0.53"
 clap = { version = "^3.0.14", features = ["derive"] }
-tokio = "^1.16.1"
+tokio = { version = "^1.16.1", features = ["rt", "macros"] }
+futures = "^0.3.19"
 pulsar = "^4.1.1"
