--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,12 @@
 name = "pucli"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Davide Ghilardi <dghila@d71.dev>"]
+description = "Simple pulsar cli"
+keywords = [ "pulsar", "cli", "tool" ]
+repository = "https://github.com/dghilardi/pucli"
+license = "MIT"
+readme = "README.md"
 
 [dependencies]
 env_logger = "^0.9.0"
