--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 [dependencies]
 env_logger = "^0.9.0"
 log = "^0.4.14"
+uuid = { version = "0.8.2", features = ["v4"] }
 
 anyhow = "^1.0.53"
 clap = { version = "^3.0.14", features = ["derive"] }
