--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ env_logger = "^0.9.0"
 log = "^0.4.14"
 uuid = { version = "0.8.2", features = ["v4"] }
 
+ctrlc = { version = "3.2.1", features = ["termination"] }
+
 anyhow = "^1.0.53"
 clap = { version = "^3.0.14", features = ["derive"] }
 tokio = { version = "^1.16.1", features = ["rt", "macros"] }
